Add nonworking additional item form

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             <ol class="thingstodo">
 
             </ol>
+            <form id="new-item">
+            <label for="new-item">Add another item</label>
+            <input type="text" class="form-control" id="new-todo-item">
+            <button type="submit" class="btn">Add</button>
+            </form>
           </div>
         </div>
       </div>
